--- a/app/views/student_application_form/personal_data_step.html.erb
+++ b/app/views/student_application_form/personal_data_step.html.erb
@@ -51,9 +51,9 @@
 
     <div class="field">
       <%= f.label :seeking_degree, "I am seeking double degree", :value => true  %>
-      <%= f.radio_button :seeking_degree, true%>
+      <%= f.radio_button :seeking_degree, true, :checked => @user.seeking_degree %>
       <%= f.label :seeking_degree, "I am not seeking double degree", :value => false %>
-      <%= f.radio_button :seeking_degree, false, :checked => true %>
+      <%= f.radio_button :seeking_degree, false, :checked => !@user.seeking_degree %>
     </div>
 
     <div class="field">
