--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -8,6 +8,7 @@
 <% else %>
 <h1 class="title"> Hi, <%= current_user.first_name %></h1>
 
+<% if current_user.progress_status == "process" or current_user.progress_status == "finished" %>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
 <div class="dashboard-container">
@@ -180,5 +181,11 @@
 			</div>
 
 		</div>
-
+<% elsif current_user.progress_status == "accepted" %>
+	<h1> Your request was successfully completed and accepted. </h1>
+<% elsif current_user.progress_status == "rejected" %>
+	<h1> Your request has been rejected </h1>
+	<%else%>
+	<h1></h1>
+<%end%>
 <%end%>
