--- a/app/assets/stylesheets/login/home.sass
+++ b/app/assets/stylesheets/login/home.sass
@@ -48,7 +48,9 @@
 	.flex-container
 		@include flexBoxVendor
 		flex-direction: row
-
+.register
+	.field
+		justify-content: flex-start
 @media (max-width: 800px)
 	.new_user
 		.field
@@ -76,3 +78,6 @@
 			padding: 0
 			border: none
 			margin: 20px 0
+	.register
+		.field
+			display: block
