Minor style changes & texts

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,30 @@
 <h1 class="title">Welcome to the International Office</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2>Opening Hours</h2>
+<p>
+
+	Tuesday and Wednesday: Mornings: 12:00 to 14:00 <br>
+	Afternoons: from 15:30 to 17:30 hours <br>
+
+	Thursday: Mornings: 12:00 to 14:00 </p>
+	<h2>Opening hours in summer</h2>
+	<p> From June 15 to September 15 and from Tuesday to Thursday from 12:00 to 14:00</p>
+
+<h2>Contact</h2>
+
+<p>
+	Luis Salgado Vice-Dean for International Relations and Corporate Partnership (Mobility Programs) <br>
+
+	Paloma García Responsible of Mobility Programs <br>
+
+	Julián Ayuso Bravo Responsible of Mobility Programs <br>
+
+	Emilie Roussel Contact for Incoming and Outgoing Students <br><br>
+
+	Email: internacional(at)etsit.upm.es <br>
+
+	Phone: +34 91 336 7299</p>
 <div class="buttons">
 
-	<%= button_to "Login with Digital Certificate", digital_certificate_path, :method=> :get, :class => "custom-button" %>
-	<%= button_to "Login without Certificate", new_user_session_path, :method=> :get, :class => "custom-button" %>
+	<%= button_to "Login with Digital Certificate", digital_certificate_path, :method=> :get, :class => "custom-button primary" %>
+	<%= button_to "Login without Certificate", new_user_session_path, :method=> :get, :class => "custom-button primary" %>
 </div>
