--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -506,7 +506,9 @@ background-image: url(https://i1.createsend1.com/ei/j/2D/FF9/768/194359/csfinal/
 
         <span style="color:#18527c"><strong>Hi,  <span style="color:#6bdb58"><%= @nominee.email %></span> </strong></span></h2>
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-          You have been selected for the ETSIT UPM Erasmus Programme
+         First of all we would like to thank you for your interest to study at Escuela Técnica Superior de
+          Ingenieros de Telecomunicación of Universidad Politécnica de Madrid (ETSIT-UPM). We confirm you that we have duly received the e-nomination from your Home University.
+          Congratulation!
         </h2>
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
