--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -9,7 +9,9 @@
 
 <% admin_name = current_user.first_name.blank? ? "Administrator" : (current_user.first_name + " " + current_user.family_name) %>
 <h1 class="title"> Hi, <%=admin_name%></h1>
-<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p class="intro-paragraph">Reamind that the deadline to receive application packages is <span class="red"><strong>June, 1st</strong></span> for the fall
+  semester or academic year 2018-19 and <span class="red"><strong>December, 1st</strong></span> for the second semester. Please <u>check registered users, documents required in pdf, and application packages before the
+  deadline</u> .</p>
 <br/>
 <div class="filters">
   <form action="/admin_dashboard" method="GET">
