Reorder steps & change email for User name in admin dashboard

--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -28,7 +28,7 @@
     padding: 10px
 .right
     float: right
-    margin-right: 10px
+    //margin-right: 10px
 .right-addon
     border-radius: 0px 5px 5px 0px
     border: 2px solid $etsit_blue
