--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -76,7 +76,7 @@
 		.row
 			border-top: 1px solid $etsit_blue
 			padding: 15px
-			min-height: 25px
+			min-height: 40px
 			.dashboard-section
 				font-size: 18px
 				font-weight: bold
@@ -115,6 +115,7 @@
 				.orange
 					color: orange
 			.collapsible
+				margin-top: 25px
 				max-height: 0
 				transition: max-height 0.2s ease-out
 				overflow: hidden
