--- a/app/views/student_application_form/_third_step.erb
+++ b/app/views/student_application_form/_third_step.erb
@@ -1,44 +1,29 @@
-<h2 class="form-subtitle">Study year</h2>
+<h2 class="form-subtitle">Purpose of stay</h2>
 <%if review%>
 <h3><%=name%></h3>
 <%end%>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
 <div class="edit_student_application_flex">
 
 <div class="field">
   <div class="flex-container">
-    <%= f.label :academic_year %><br />
-    <%= f.select :academic_year, [
-      '2018-2019: Fall Semester',
-      '2018-2019: Spring Semester',
-      '2018-2019: Academic Year',
-      '2019-2020: Fall Semester',
-      '2019-2020: Spring Semester',
-      '2019-2020: Academic Year',
-      ],{}, {disabled: review}%>
-    </div>
+    <%= f.label :project_work, "Project Work (areas of interest)" %><br />
+    <%= f.text_field :project_work, autofocus: true, autocomplete: "project_work", disabled: review %>
   </div>
-
+</div>
   <div class="field">
     <div class="flex-container">
-      <%= f.label :programme %><br />
-      <%= f.select :programme, [
-        'Eramus+ Studies',
-        'Eramus+ Placement',
-        'Magalhães',
-        'Bilateral Agreement',
-        'Visiting Student',
-        'SICUE/SENECA',
-        ],{}, {disabled: review} %>
-      </div>
-    </div>
-
-    <div class="field">
-      <div class="flex-container">
-        <%= f.label :field_of_study %><br />
-        <%= f.text_field :field_of_study, autofocus: true, autocomplete: "field_of_study", :placeholder => "Telecommunication Engineering", disabled: review %>
-      </div>
+      <%= f.label :graduate_courses, "Graduate Courses" %><br />
+      <%= f.text_field :graduate_courses, autofocus: true, autocomplete: "graduate_courses", disabled: review %>
     </div>
   </div>
+<div class="field">
+  <div class="flex-container">
+    <%= f.label :under_grad_courses, "Undergraduate Courses" %><br />
+    <%= f.text_field :under_grad_courses, autofocus: true, autocomplete: "under_grad_courses", disabled: review %>
+  </div>
+</div>
+
+
+</div>
  
