--- a/app/assets/stylesheets/flash.sass
+++ b/app/assets/stylesheets/flash.sass
@@ -17,18 +17,20 @@
             color: #92c400
             float: right
     &.error
-        background-color: #fbb2b2
-        border: 2px solid #ff0000
-        color: #ff0000
+        background-color: #ffdede
+        border: 2px solid #c80202
+        color: #c80202
         &::after
             display: inline-block
             content: '✖'
-            color: #ff0000
+            color: #c80202
             float: right
     &.alert
-        background-color: rgba(255,218,144,0.15)
+        background-color: #ffdede
+        border: 2px solid #c80202
+        color: #c80202
         &::after
             display: inline-block
             content: '✖'
-            color: #92c400
+            color: #c80202
             float: right
