--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -37,6 +37,43 @@
 				vertical-align: middle
 				&.hidden
 					display: none
+#several-nominee-dialog
+	padding: 25px
+	display: none
+	canvas#canvas
+		width: 150px
+		height: 150px
+		display: none
+	.title
+		margin-top: 0
+		display: inline-block
+	.close
+		margin: -18px
+	.flex-container
+		.image-container
+			display: inline-block
+			.picture
+				width: 150px
+		.several-nominee-actions
+			display: inline-block
+			vertical-align: top
+			padding: 10px
+			.input-file
+			.custom-button
+				margin: 10px
+			.messages-from-server 
+				.message-from-server 
+					margin-top: 0
+					padding-left: 10px
+					&.notice
+						color: green
+					&.alert
+						color: red
+			#spinner
+				width: 60px
+				vertical-align: middle
+				&.hidden
+					display: none
 .dashboard-container 
 	@include flexBoxVendor
 	.left-column
