--- a/app/views/student_application_form/_first_step.erb
+++ b/app/views/student_application_form/_first_step.erb
@@ -40,5 +40,15 @@
         <%= f.text_field :field_of_study, autofocus: true, autocomplete: "field_of_study", :placeholder => "Telecommunication Engineering", disabled: review %>
       </div>
     </div>
+
+
+    <div class="field">
+      <div class="flex-container">
+      <%= f.radio_button :seeking_degree, true, :checked => sap.user.seeking_degree %>
+      <%= f.label :seeking_degree, "I am seeking double degree", :value => true  %>
+      <%= f.radio_button :seeking_degree, false, :checked => !sap.user.seeking_degree %>
+      <%= f.label :seeking_degree, "I am not seeking double degree", :value => false %>
+    </div>
+ </div>
   </div>
  
