--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -4,6 +4,10 @@
 </div>
 <% like_email = "%#{ params[:email]}%"    %>
 <% like_name = "%#{ params[:name]}%"    %>
+<% like_period = "%#{ params[:period]}%"    %>
+<% like_university = "%#{ params[:university]}%"    %>
+<% like_state = "%#{ params[:progress_state]}%"    %>
+
 <% users = User.where("lower(email) LIKE ? and lower(first_name) LIKE ?", like_email.downcase, like_name.downcase).reject{|t| t.role == "admin"} %>
 <% nominees = NominatedUser.where("lower(email) LIKE ? ", like_email.downcase)%>
 
@@ -18,12 +22,24 @@
     <h2>Filters</h2>
     <div class="flex-filters">
       <div class="field filter">
-        <label class="label">E-mail </label>
-        <input name="email" placeholder="Find by e-mail" value="<%=params[:email]%>"/>
+        <label class="label">Period </label>
+        <input name="period" placeholder="Find by name" value="<%=params[:period]%>"/>
+      </div>
+      <div class="field filter">
+        <label class="label">University </label>
+        <input name="university" placeholder="Find by name" value="<%=params[:university]%>"/>
+      </div>
+      <div class="field filter">
+        <label class="label">Progress State </label>
+        <input name="progress_state" placeholder="Find by name" value="<%=params[:progress_state]%>"/>
       </div>
       <div class="field filter">
         <label class="label">Name </label>
         <input name="name" placeholder="Find by name" value="<%=params[:name]%>"/>
+      </div>
+      <div class="field filter">
+        <label class="label">Email </label>
+        <input name="email" placeholder="Find by name" value="<%=params[:email]%>"/>
       </div>
 
       <input type="submit" class="custom-button primary" value="Search"/>
@@ -171,11 +187,11 @@
             </div>
             <div class="user-<%= user.id %>-id flex-table-cell flex-table-status">
               <span class="big-hidden">Status: </span>
-              <% if (user.progress_status == "process" and user.percentage.to_i != 100) || user.progress_status == "renounce" %>
+              <% if (user.progress_status != "finished" and user.percentage.to_i != 100) %>
                 <%= user.progress_status %>
-              <% elsif user.progress_status == "process" and user.percentage.to_i === 100 %>
+              <% elsif user.progress_status == "finished"  %>
                 <%= form_for(user, url: set_user_status_path,  method: :post) do |f|%>
-                  <%= f.select :progress_status, [:finished, :rejected, :accepted], {}, {value: user.progress_status, class: 'form-control', onchange: 'this.form.submit();'}%>
+                  <%= f.select :progress_status, [:finished, :process, :accepted, :rejected], {}, {value: user.progress_status, class: 'form-control', onchange: 'this.form.submit();'}%>
                   <%= f.hidden_field :id, :value => user.id %>
                 <% end %>
               <% else %>
@@ -218,5 +234,26 @@
     </div>
 
   </div>
+
+<div id="several-nominee-dialog" > 
+      <h2 class="title">Several Nomination</h2>
+      <button class="transparent-button action-button right close" id="several-nominee-dialog-close"><i class="mdi mdi-close"></i></button>
+      <div class="flex-container">
+        <canvas id="canvas"></canvas>
+        <div class="several-nominee-actions">
+          <%= form_tag "/user/file_upload_ajax", :method => :POST do |form| %>
+          <br></br>
+          <div class="messages-from-server">
+            
+          </div>
+          <div class="align-right">
+            <%= submit_tag "Send", :class => "custom-button" %>
+            <img id="spinner" src="/assets/spinner.gif" class="hidden"/>
+          </div>
+          <% end %>
+        </div>
+      </div>
+
+    </div>
 
   <br/><br/>
