--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -1,4 +1,7 @@
 <div class="align-right">
+<% if current_user.role == "user" && current_user.progress_status == "process" && current_user.percentage_num.to_i == 100 %>
+	<%= button_to "Finish Application", user_finish_application_form_path, :method=> :post, :class => "custom-button ", :form_class => "inline" %>
+<% end %>
 <a href="mailto:internacional@etsit.upm.es" class="inline"><button class="custom-button primary">OI Contact</button></a>
 <%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button ", :form_class => "inline" %>
 </div>
@@ -8,7 +11,7 @@
 <% else %>
 <h1 class="title"> Hi, <%= current_user.first_name %></h1>
 
-<% if current_user.progress_status == "process" or current_user.progress_status == "finished" %>
+<% if current_user.progress_status == "process" %>
     <p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall
       semester or academic year 2018-19 and <span class="red"><strong>December, 1st</strong></span> for the second semester. Please <u>complete your application package before the
       deadline</u> with the documents required in pdf.</p>
@@ -37,11 +40,11 @@
 						<div class="progress-line">
 						</div>
 						<div class="progress-balls">
-						<a href="/student_application_form/personal_data_step">
-						<span class='progress-ball done-step'></span>
+						<a href="/student_application_form/personal_data_step" title="Personal Data">
+							<span class='progress-ball done-step'></span>
 						</a>
 						<% final_steps_array = sap.completed_steps_array %>
-						<% titles = ["Sending Institution", "Purpose of stay", "Study year", "Language Competence", "Work Experience", "Previous and current studies"] %>
+						<% titles = ["Study year", "Sending Institution", "Purpose of stay", "Language Competence", "Work Experience", "Previous and current studies"] %>
 						<% for i in 1..6 do %>
 							<% classBall = final_steps_array[i-1] ? "done-step" : "todo-step" %>
 							<% ball = "<span class='progress-ball  #{classBall}'></span>"%>
@@ -183,6 +186,8 @@
 			</div>
 
 		</div>
+<% elsif current_user.progress_status == "finished" %>
+	<h1> Intenational office has been notified and they will contact back soon. </h1>
 <% elsif current_user.progress_status == "accepted" %>
 	<h1> Your request was successfully completed and accepted. </h1>
 <% elsif current_user.progress_status == "rejected" %>
