--- a/app/views/student_application_form/review_personal_data_step.html.erb
+++ b/app/views/student_application_form/review_personal_data_step.html.erb
@@ -45,12 +45,12 @@
       <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "tel", disabled: true %>
     </div>
 
-    <div class="field">
-      <%= f.label :seeking_degree, "I am seeking double degree", :value => true  %>
-      <%= f.radio_button :seeking_degree, true, :checked => user.seeking_degree, disabled: true %>
-      <%= f.label :seeking_degree, "I am not seeking double degree", :value => false %>
-      <%= f.radio_button :seeking_degree, false, :checked => !user.seeking_degree, disabled: true%>
-    </div>
+<!--    <div class="field">
+      <%#= f.label :seeking_degree, "I am seeking double degree", :value => true  %>
+      <%#= f.radio_button :seeking_degree, true, :checked => user.seeking_degree, disabled: true %>
+      <%#= f.label :seeking_degree, "I am not seeking double degree", :value => false %>
+      <%#= f.radio_button :seeking_degree, false, :checked => !user.seeking_degree, disabled: true%>
+    </div>-->
 
     <div class="field">
       <%= f.label :email %><br />
