--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -42,13 +42,13 @@
     <%= f.label :phone_number %><br />
     <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "tel" %>
   </div>
-  <div class="field">
 
-    <%= f.radio_button :seeking_degree, true%>
-    <%= f.label :seeking_degree, "I am seeking double degree", :value => true  %>
-    <%= f.radio_button :seeking_degree, false, :checked => true %>
-    <%= f.label :seeking_degree, "I am not seeking double degree", :value => false %>
-  </div>
+<!--  <div class="field">
+    <%#= f.radio_button :seeking_degree, true%>
+    <%#= f.label :seeking_degree, "I am seeking double degree", :value => true  %>
+    <%#= f.radio_button :seeking_degree, false, :checked => true %>
+    <%#= f.label :seeking_degree, "I am not seeking double degree", :value => false %>
+  </div>-->
 
 
   <div class="field">
