--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -1,7 +1,5 @@
 <div class="align-right">
-<% if current_user.role == "user" && current_user.progress_status == "process" && current_user.percentage_num.to_i == 100 %>
-	<%= button_to "Finish Application", user_finish_application_form_path, :method=> :post, :class => "custom-button ", :form_class => "inline" %>
-<% end %>
+
 <a href="mailto:internacional@etsit.upm.es" class="inline"><button class="custom-button primary">OI Contact</button></a>
 <%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button ", :form_class => "inline" %>
 </div>
@@ -163,7 +161,9 @@
 				</div>
 			</div>
 		<% end %>
-
+		<% if current_user.role == "user" && current_user.progress_status == "process" && current_user.percentage_num.to_i == 100 %>
+			<%= button_to "Finish Application", user_finish_application_form_path, :method=> :post, :class => "custom-button primary", :form_class => "inline" %>
+		<% end %>
 		<div id="edit-picture-dialog" > 
 			<h2 class="title">Edit your picture</h2>
 			<button class="transparent-button action-button right close" id="edit-picture-dialog-close"><i class="mdi mdi-close"></i></button>
