Some required indications & a11y fixes

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -3,7 +3,7 @@
 	font-family: 'Source Sans Pro', sans-serif
 
 .red
-	color: red
+	color: #e00
 html
 	height: 100%
 	body
@@ -52,7 +52,7 @@ html
 						width: 100%
 
 			p.intro-paragraph
-				color: #9e9e9e
+				color: #767676
 			form
 				.field
 					label
