--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,13 +12,13 @@
 <h2>Contact</h2>
 
 <p>
-	Luis Salgado Vice-Dean for International Relations and Corporate Partnership (Mobility Programs) <br>
+	<strong>Luis Salgado</strong> Vice-Dean for International Relations and Corporate Partnership (Mobility Programs) <br>
 
-	Paloma García Responsible of Mobility Programs <br>
+	<strong>Paloma García</strong> Responsible of Mobility Programs <br>
 
-	Julián Ayuso Bravo Responsible of Mobility Programs <br>
+	<strong>Julián Ayuso Bravo</strong> Responsible of Mobility Programs <br>
 
-	Emilie Roussel Contact for Incoming and Outgoing Students <br><br>
+	<strong>Emilie Roussel</strong> Contact for Incoming and Outgoing Students <br><br>
 
 	Email: internacional(at)etsit.upm.es <br>
 
