--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar-etsit">
     <div class="container">
         <div id="navlogos">
-          <a class="navbar-brand upm-brand" href="http://www.upm.es"><%= image_tag "LOGO-UPM-WT.gif"%></a>
-          <a class="navbar-brand etsit-brand" href="http://www.etsit.upm.es"><%= image_tag "LOGO_ETSIT_WT.gif" %></a>
+          <a class="navbar-brand upm-brand" href="http://www.upm.es"><%= image_tag("LOGO-UPM-WT.gif", alt: "Logotipo UPM")%> </a>
+          <a class="navbar-brand etsit-brand" href="http://www.etsit.upm.es"><%= image_tag("LOGO_ETSIT_WT.gif", alt: "Logotipo ETSIT") %></a>
         </div>
         <div class="header">
           <a href="http://www.etsit.upm.es/"><h3 class="navbar-header etsit-header">Escuela Técnica Superior de Ingenieros de Telecomunicación</h3></a>
