--- a/app/views/student_application_form/_sixth_step.erb
+++ b/app/views/student_application_form/_sixth_step.erb
@@ -2,9 +2,9 @@
 <%if review%>
 <h3><%=name%></h3>
 <%end%>
-<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<div class="edit_student_application_flex">
-<div class="field">
+<!--<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
+<div class="edit_student_application_flex studies">
+<div class="field field100">
   <div class="flex-container">
     <%= f.label :current_diploma_degree, "Currently studying Diploma/Degree" %><br />
     <%= f.text_field :current_diploma_degree, autofocus: true, autocomplete: "current_diploma_degree", disabled: review %>
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<div class="field">
+<div class="field field50">
   <div class="flex-container">
     <%= f.label :specialization_area, "Area of specialization" %><br />
     <%= f.text_field :specialization_area, autofocus: true, autocomplete: "specialization_area", disabled: review %>
@@ -30,13 +30,13 @@
     <%= f.label :already_study_abroad, "Already been studying abroad?",class: "checkBox" %><br />
   </div>
 </div>
-<div class="field">
+<div class="field field50">
   <div class="flex-container">
     <%= f.label :where_study_abroad , "When do you study abroad?"%><br />
     <%= f.text_field :where_study_abroad, autofocus: true, autocomplete: "where_study_abroad", disabled: review %>
   </div>
 </div>
-<div class="field">
+<div class="field field50">
   <div class="flex-container">
     <%= f.label :where_institution_abroad, "At which institution?" %><br />
     <%= f.text_field :where_institution_abroad, autofocus: true, autocomplete: "where_institution_abroad", disabled: review %>
