Nominee multiple users

--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -32,6 +32,13 @@
 				transition: 0.2s all ease-in
 			i:hover:before
 				transform: scale(1.5)
+			&#multiple-nominees-button
+				vertical-align: text-bottom
+				height: 38px
+				margin: 0px
+				width: 38px
+				padding: 0
+				margin-left: 4px
 	.flex-table
 		@include flexBoxVendor
 		text-align: left
@@ -119,3 +126,11 @@
 	display: flex
 .table-header
 	display: flex
+#several-nominee-dialog
+	.several-nominee-actions
+		form
+			padding: 15px
+			textarea
+				width: 100%
+				min-height: 300px
+				margin: 10px -10px
