--- a/app/assets/stylesheets/flash.sass
+++ b/app/assets/stylesheets/flash.sass
@@ -7,11 +7,12 @@
     outline: none
     border: 2px solid $etsit_blue
     padding: 10px
+    white-space: pre-line
     &.notice
         background-color: #ebffb0
         border: 2px solid #92c400
         color: #92c400
-        &::after
+        &::before
             display: inline-block
             content: '✖'
             color: #92c400
@@ -20,7 +21,7 @@
         background-color: #ffdede
         border: 2px solid #c80202
         color: #c80202
-        &::after
+        &::before
             display: inline-block
             content: '✖'
             color: #c80202
@@ -29,7 +30,7 @@
         background-color: #ffdede
         border: 2px solid #c80202
         color: #c80202
-        &::after
+        &::before
             display: inline-block
             content: '✖'
             color: #c80202
