--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,16 @@
 <h1 class="title">Welcome to the International Office</h1>
 <h2>Opening Hours</h2>
-<p>
 
-	Tuesday and Wednesday: Mornings: 12:00 to 14:00 <br>
-	Afternoons: from 15:30 to 17:30 hours <br>
+	Tuesday and Wednesday: 
+	<ul>
+		<li>Mornings: 12:00 to 14:00 </li>
+		<li>Afternoons: from 15:30 to 17:30  </li>
+	</ul>
 
-	Thursday: Mornings: 12:00 to 14:00 </p>
+	Thursday: 
+	<ul><li>Mornings: 12:00 to 14:00 </li></ul>
 	<h2>Opening hours in summer</h2>
-	<p> From June 15 to September 15 and from Tuesday to Thursday from 12:00 to 14:00</p>
+	<p> From June 15th to September 15th and from Tuesday to Thursday from 12:00 to 14:00</p>
 
 <h2>Contact</h2>
 
