--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -75,6 +75,8 @@
 			color: #333
 		.flex-table-email
 			width: 17%
+			a:hover
+				text-decoration: underline
 		.flex-table-univ
 			width: 16%
 		.flex-table-period
