--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -47,6 +47,9 @@
 						<div class="progress-line">
 						</div>
 						<div class="progress-balls">
+							<a href="/review_student_application_form/<%= current_user.id.to_s%>}/personal_data_step" title="Personal Data">
+							<span class='progress-ball done-step'></span>
+						</a>
 							<% final_steps_array = sap.completed_steps_array %>
 							<% titles = ["Study year","Sending Institution", "Purpose of stay",  "Language Competence", "Work Experience", "Previous and current studies"] %>
 							<% for i in 1..6 do %>
