--- a/app/views/student_application_form/_second_step.html.erb
+++ b/app/views/student_application_form/_second_step.html.erb
@@ -52,7 +52,7 @@
 <div class="field ">
   <div class="flex-container">
     <%= f.label :inst_telephone, "Telephone" %><br />
-    <%= f.telephone_field :inst_telephone, autofocus: true, autocomplete: "inst_telephone", disabled: review, pattern: "\+\d*", placeholder: "Include country code (e.g. +34...)", required: true %>
+    <%= f.telephone_field :inst_telephone, autofocus: true, autocomplete: "inst_telephone", disabled: review, pattern: "\+\d*", placeholder: "Include country code (e.g. +34...)" %>
   </div>
 </div>
 
