--- a/app/views/student_application_form/_first_step.erb
+++ b/app/views/student_application_form/_first_step.erb
@@ -37,7 +37,7 @@
     <div class="field field50">
       <div class="flex-container">
         <%= f.label :field_of_study %><br />
-        <%= f.text_field :field_of_study, autofocus: true, autocomplete: "field_of_study", :placeholder => "Telecommunication Engineering", disabled: review %>
+        <%= f.select :field_of_study, ["Telecommunication","Biotechnology"],{}, {disabled: review} %>
       </div>
     </div>
 
