--- a/app/views/student_application_form/_third_step.erb
+++ b/app/views/student_application_form/_third_step.erb
@@ -8,19 +8,19 @@
 <div class="field">
   <div class="flex-container">
     <%= f.label :project_work, "Project Work (areas of interest)" %><br />
-    <%= f.text_field :project_work, autofocus: true, autocomplete: "project_work", disabled: review %>
+    <%= f.text_area :project_work, autofocus: true, autocomplete: "project_work", disabled: review %>
   </div>
 </div>
   <div class="field">
     <div class="flex-container">
       <%= f.label :graduate_courses, "Graduate Courses" %><br />
-      <%= f.text_field :graduate_courses, autofocus: true, autocomplete: "graduate_courses", disabled: review %>
+      <%= f.text_area :graduate_courses, autofocus: true, autocomplete: "graduate_courses", disabled: review %>
     </div>
   </div>
 <div class="field">
   <div class="flex-container">
     <%= f.label :under_grad_courses, "Undergraduate Courses" %><br />
-    <%= f.text_field :under_grad_courses, autofocus: true, autocomplete: "under_grad_courses", disabled: review %>
+    <%= f.text_area :under_grad_courses, autofocus: true, autocomplete: "under_grad_courses", disabled: review %>
   </div>
 </div>
 
